# qa-challenge

./: .flake8  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
qa_challenge/components/: board_card.py  header_menu.py
qa_challenge/model/: credentials.py
qa_challenge/pages/: base_logged_in_page.py  base_page.py  boards_page.py  create_board_page.py  home_page.py  login_page.py
tests/: test_sprintboards.py
